# vv4os

./: .gitignore  LICENSE  Makefile  README.md  linker.ld
boot/: boot.asm
core/: config.h  vv4os.c
debug/: gdb_stub.c  gdb_stub.h
dt/: desc_tables.h
io/: pci.c  pci.h  ports.h  uart.c  uart.h  vga_terminal.c  vga_terminal.h
kernel/: CMakeLists.txt
kernel/src/: LICENSE  Makefile  linker.ld
kernel/src/arch/x86/dt/: desc_tables_x86.c  gdt_x86.asm  gdt_x86.c  gdt_x86.h  idt_x86.asm  idt_x86.c  idt_x86.h
kernel/src/arch/x86/mem/: kernel_page_directory.asm  phys_mem_mgr_x86.c  virt_mem_mgr_x86.c
kernel/src/arch/x86/user/: context_switch.asm  process.c
kernel/src/boot/: boot.asm
kernel/src/boot/multiboot/: multiboot.h
kernel/src/core/: config.h  vv4os.c
kernel/src/debug/: gdb_stub.c  gdb_stub.h
kernel/src/dt/: desc_tables.h
kernel/src/io/: pci.c  pci.h  ports.c  ports.h  uart.c  uart.h  vga_terminal.c  vga_terminal.h
kernel/src/io/disk/: disk.c  disk.h  file.h  file_op_stubs.c  ide.c  ide.h  mbr.h  volume.c  volume.h
kernel/src/io/disk/fs/: fat.c  fat.h
kernel/src/mem/: alloc.c  kernel_mem.h  phys_mem_mgr.h  virt_mem_mgr.h
kernel/src/mem/liballoc/: hooks.c  liballoc.c  liballoc.h
kernel/src/stdlib/: assert.h  ctype.c  ctype.h  stdio.c  stdio.h  stdlib.c  stdlib.h  string.c  string.h
kernel/src/user/: process.c  process.h  syscall.c  syscall.h
kernel/src/util/: bitmap.c  bitmap.h  bitwise.c  bitwise.h  sync.c  sync.h
kernel/toolchains/: Toolchain-i686-elf.cmake
mem/: alloc.c  phys_mem_mgr.h  virt_mem_mgr.h
proc_exts/: fpu.asm  fpu.h
(+20 files in other folders)
